--- a/dev-python/sip/ChangeLog
+++ b/dev-python/sip/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/sip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.224 2012/09/09 15:52:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.225 2012/10/05 20:24:37 hwoarang Exp $
+
+*sip-4.14 (05 Oct 2012)
+
+  05 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +sip-4.14.ebuild:
+  Version bump. Bug #437218
 
   09 Sep 2012; Raúl Porcel <armin76@gentoo.org> sip-4.13.3.ebuild:
   alpha/ia64/sparc stable wrt #429042
