--- a/kde-base/pykde4/ChangeLog
+++ b/kde-base/pykde4/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/pykde4
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/pykde4/ChangeLog,v 1.178 2012/10/02 18:12:09 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/pykde4/ChangeLog,v 1.179 2012/10/05 20:26:35 hwoarang Exp $
+
+*pykde4-4.9.2-r1 (05 Oct 2012)
+
+  05 Oct 2012; Markos Chandras <hwoarang@gentoo.org>
+  +files/pykde4-4.9.2-pyqt45.patch, +pykde4-4.9.2-r1.ebuild:
+  Revbump to fix building with PyQt4-4.9.5. Bug #436578
 
 *pykde4-4.9.2 (02 Oct 2012)
 
