--- a/dev-util/xxdiff/ChangeLog
+++ b/dev-util/xxdiff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/xxdiff
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/xxdiff/ChangeLog,v 1.56 2012/08/28 14:38:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/xxdiff/ChangeLog,v 1.57 2012/10/05 20:34:06 hwoarang Exp $
+
+  05 Oct 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
+  Taking over package. Adding qt@ as backup herd
 
   28 Aug 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
   Push to maintainer-needed.
@@ -19,4 +22,3 @@
   26 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
   +xxdiff-4.0_beta1_p20110426.ebuild:
   Initial commit.
-
