--- a/app-portage/gentoopm/ChangeLog
+++ b/app-portage/gentoopm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/gentoopm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoopm/ChangeLog,v 1.24 2012/10/05 07:55:32 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoopm/ChangeLog,v 1.25 2012/10/05 21:12:57 mgorny Exp $
+
+  05 Oct 2012; Michał Górny <mgorny@gentoo.org> gentoopm-0.2.5-r1.ebuild:
+  Add a blocker on new pkgcore to avoid breakage.
 
   05 Oct 2012; Michał Górny <mgorny@gentoo.org> gentoopm-0.2.5-r1.ebuild:
   Update pkgcore dependency.
