--- a/sys-kernel/pf-sources/ChangeLog
+++ b/sys-kernel/pf-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/pf-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.73 2012/09/17 20:14:31 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.74 2012/10/05 22:35:21 hwoarang Exp $
+
+*pf-sources-3.6.1 (05 Oct 2012)
+
+  05 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +pf-sources-3.6.1.ebuild,
+  -pf-sources-3.5.3.ebuild:
+  Version bump
 
 *pf-sources-3.5.4 (17 Sep 2012)
 
