--- a/media-sound/timidity++/ChangeLog
+++ b/media-sound/timidity++/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/timidity++
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/timidity++/ChangeLog,v 1.153 2012/10/04 21:35:03 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/timidity++/ChangeLog,v 1.154 2012/10/06 01:21:20 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> timidity++-2.14.0.ebuild:
+  stable ppc64, bug #432608
 
   04 Oct 2012; Brent Baude <ranger@gentoo.org> timidity++-2.14.0.ebuild:
   Marking timidity++-2.14.0 ppc for bug 432608
