--- a/dev-python/six/ChangeLog
+++ b/dev-python/six/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/six
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/six/ChangeLog,v 1.10 2012/09/29 23:42:40 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/six/ChangeLog,v 1.11 2012/10/06 01:26:56 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> six-1.2.0.ebuild:
+  keyword ~arm, bug #437250
 
   29 Sep 2012; Tim Harder <radhermit@gentoo.org> six-1.2.0.ebuild:
   Call distutils_src_prepare.
