--- a/www-servers/tornado/ChangeLog
+++ b/www-servers/tornado/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/tornado
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/tornado/ChangeLog,v 1.25 2012/10/04 20:04:11 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/tornado/ChangeLog,v 1.26 2012/10/06 01:48:19 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> tornado-2.3.ebuild:
+  keyword ~arm, bug #437250
 
   04 Oct 2012; Kacper Kowalik <xarthisius@gentoo.org> tornado-2.3.ebuild:
   Add prefix keywords
