--- a/app-text/highlight/ChangeLog
+++ b/app-text/highlight/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-text/highlight
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.53 2012/09/17 14:59:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.54 2012/10/06 02:45:05 radhermit Exp $
+
+*highlight-3.12 (06 Oct 2012)
+
+  06 Oct 2012; Tim Harder <radhermit@gentoo.org> +highlight-3.12.ebuild:
+  Version bump. Fix build with >=boost-1.50.
 
   17 Sep 2012; Alexis Ballier <aballier@gentoo.org> highlight-3.9.ebuild:
   keyword ~amd64-fbsd
