--- a/app-text/highlight/ChangeLog
+++ b/app-text/highlight/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/highlight
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.54 2012/10/06 02:45:05 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.55 2012/10/06 02:46:48 radhermit Exp $
+
+  06 Oct 2012; Tim Harder <radhermit@gentoo.org> -highlight-3.7.ebuild,
+  -highlight-3.8.ebuild:
+  Remove old.
 
 *highlight-3.12 (06 Oct 2012)
 
