--- a/www-client/elinks/ChangeLog
+++ b/www-client/elinks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/elinks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.147 2012/10/05 18:07:13 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.148 2012/10/06 03:25:54 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  elinks-0.12_pre5-r2.ebuild:
+  stable ppc, bug #437196
 
   05 Oct 2012; Brent Baude <ranger@gentoo.org> elinks-0.12_pre5-r2.ebuild:
   Marking elinks-0.12_pre5-r2 ppc64 for bug 437196
