--- a/app-editors/focuswriter/ChangeLog
+++ b/app-editors/focuswriter/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/focuswriter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/focuswriter/ChangeLog,v 1.7 2012/09/02 01:38:30 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/focuswriter/ChangeLog,v 1.8 2012/10/06 06:00:12 yngwin Exp $
+
+*focuswriter-1.4.0 (06 Oct 2012)
+
+  06 Oct 2012; Ben de Groot <yngwin@gentoo.org> +focuswriter-1.4.0.ebuild,
+  -focuswriter-1.3.90.ebuild:
+  Version bump. Add l10n handling. Remove beta.
 
 *focuswriter-1.3.90 (02 Sep 2012)
 
