--- a/dev-ruby/haml/ChangeLog
+++ b/dev-ruby/haml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/haml
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.79 2012/09/27 09:54:28 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.80 2012/10/06 06:17:36 graaff Exp $
+
+  06 Oct 2012; Hans de Graaff <graaff@gentoo.org> -haml-3.1.4.ebuild:
+  Cleanup.
 
   27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> haml-3.1.4.ebuild,
   haml-3.1.6.ebuild:
