--- a/gnome-extra/gnome-dvb-daemon/ChangeLog
+++ b/gnome-extra/gnome-dvb-daemon/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/gnome-dvb-daemon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-dvb-daemon/ChangeLog,v 1.15 2012/10/04 14:53:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-dvb-daemon/ChangeLog,v 1.16 2012/10/06 06:37:52 pacho Exp $
+
+*gnome-dvb-daemon-0.2.10 (06 Oct 2012)
+
+  06 Oct 2012; Pacho Ramos <pacho@gentoo.org> +gnome-dvb-daemon-0.2.10.ebuild,
+  -gnome-dvb-daemon-0.2.5.ebuild, -gnome-dvb-daemon-0.2.7.ebuild,
+  -gnome-dvb-daemon-0.2.8.ebuild:
+  Version bump, drop old.
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gnome-dvb-daemon-0.2.9.ebuild:
   Stable for amd64, wrt bug #427544
@@ -66,4 +73,3 @@
   +gnome-dvb-daemon-0.2.2.ebuild, +metadata.xml:
   Added gnome-extra/gnome-dvb-daemon-0.22, bug 280912. Thanks to Florian
   Steinel and Wojciech Myrda.
-
