--- a/media-sound/redoflacs/ChangeLog
+++ b/media-sound/redoflacs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/redoflacs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/redoflacs/ChangeLog,v 1.2 2012/10/03 05:25:40 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/redoflacs/ChangeLog,v 1.3 2012/10/06 07:40:48 yngwin Exp $
+
+*redoflacs-0.15 (06 Oct 2012)
+
+  06 Oct 2012; Ben de Groot <yngwin@gentoo.org> +redoflacs-0.15.ebuild,
+  -redoflacs-0.14.1.1.ebuild, -redoflacs-0.14.1.ebuild:
+  Version bump (bug #437302). Remove old.
 
 *redoflacs-0.14.1.1 (03 Oct 2012)
 
