--- a/app-text/iso-codes/ChangeLog
+++ b/app-text/iso-codes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/iso-codes
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.126 2012/10/04 14:46:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.127 2012/10/06 08:45:28 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> iso-codes-3.37.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> iso-codes-3.37.ebuild:
   Stable for amd64, wrt bug #427544
