--- a/dev-lang/python/ChangeLog
+++ b/dev-lang/python/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.619 2012/10/02 15:21:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.620 2012/10/06 08:54:30 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> python-3.1.5.ebuild:
+  arm stable, bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> python-3.1.5.ebuild:
   Stable for HPPA (bug #427548).
