--- a/dev-cpp/glibmm/ChangeLog
+++ b/dev-cpp/glibmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/glibmm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.189 2012/10/04 14:46:40 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.190 2012/10/06 08:57:49 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> glibmm-2.32.1.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> glibmm-2.32.1.ebuild:
   Stable for amd64, wrt bug #427544
