--- a/x11-libs/gdk-pixbuf/ChangeLog
+++ b/x11-libs/gdk-pixbuf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gdk-pixbuf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gdk-pixbuf/ChangeLog,v 1.73 2012/10/04 15:03:35 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gdk-pixbuf/ChangeLog,v 1.74 2012/10/06 09:06:20 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> gdk-pixbuf-2.26.4.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gdk-pixbuf-2.26.4.ebuild:
   Stable for amd64, wrt bug #427544
