--- a/dev-cpp/gtkmm/ChangeLog
+++ b/dev-cpp/gtkmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gtkmm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.234 2012/10/04 14:46:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.235 2012/10/06 09:10:05 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> gtkmm-3.4.0.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gtkmm-3.4.0.ebuild:
   Stable for amd64, wrt bug #427544
