--- a/dev-libs/atk/ChangeLog
+++ b/dev-libs/atk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/atk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.247 2012/10/04 14:47:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.248 2012/10/06 09:11:08 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> atk-2.4.0.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> atk-2.4.0.ebuild:
   Stable for amd64, wrt bug #427544
