--- a/net-misc/ssh-askpass-fullscreen/ChangeLog
+++ b/net-misc/ssh-askpass-fullscreen/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/ssh-askpass-fullscreen
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ssh-askpass-fullscreen/ChangeLog,v 1.22 2012/09/19 20:22:50 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ssh-askpass-fullscreen/ChangeLog,v 1.23 2012/10/06 09:14:51 pacho Exp $
+
+*ssh-askpass-fullscreen-1.0 (06 Oct 2012)
+
+  06 Oct 2012; Pacho Ramos <pacho@gentoo.org>
+  +ssh-askpass-fullscreen-1.0.ebuild, metadata.xml:
+  Version bump.
 
   19 Sep 2012; Jeremy Olexa <darkside@gentoo.org> metadata.xml:
   dropping maintainership, backup herd exists
@@ -105,4 +111,3 @@
   +metadata.xml, +ssh-askpass-fullscreen-0.4.ebuild:
   initial commit, bug #194788. gtk2-ssh-askpass replacement, upstream changed
   names. Cannot do a pkgmove until this package is stable I am afraid.
-
