--- a/dev-python/pygobject/ChangeLog
+++ b/dev-python/pygobject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygobject
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.173 2012/10/06 09:13:46 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.174 2012/10/06 09:14:56 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> pygobject-2.28.6-r52.ebuild:
+  arm stable, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> pygobject-3.2.2.ebuild:
   arm stable, bug #427544
