--- a/net-im/err/ChangeLog
+++ b/net-im/err/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/err
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/err/ChangeLog,v 1.7 2012/09/18 15:31:37 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/err/ChangeLog,v 1.8 2012/10/06 09:15:59 pinkbyte Exp $
+
+*err-1.3.1 (06 Oct 2012)
+
+  06 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -err-1.2.1-r1.ebuild,
+  -err-1.3.0-r1.ebuild, +err-1.3.1.ebuild, -files/err-tests.patch:
+  Version bump. Drop old ebuilds and tests' patch
 
   18 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> err-1.3.0-r1.ebuild:
   Fix description
