--- a/dev-util/glade/ChangeLog
+++ b/dev-util/glade/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/glade
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.170 2012/10/04 14:51:06 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.171 2012/10/06 09:16:07 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> glade-3.12.1.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> glade-3.12.1.ebuild:
   Stable for amd64, wrt bug #427544
