--- a/dev-util/gtk-builder-convert/ChangeLog
+++ b/dev-util/gtk-builder-convert/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/gtk-builder-convert
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-builder-convert/ChangeLog,v 1.11 2012/10/04 14:51:21 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-builder-convert/ChangeLog,v 1.12 2012/10/06 09:17:05 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org>
+  gtk-builder-convert-2.24.11.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gtk-builder-convert-2.24.11.ebuild:
