--- a/dev-lang/vala/ChangeLog
+++ b/dev-lang/vala/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/vala
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/vala/ChangeLog,v 1.119 2012/09/25 07:56:30 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/vala/ChangeLog,v 1.120 2012/10/06 09:24:09 pacho Exp $
+
+  06 Oct 2012; Pacho Ramos <pacho@gentoo.org> vala-0.10.4-r2.ebuild,
+  vala-0.12.1-r1.ebuild, vala-0.14.2-r2.ebuild, vala-0.16.1-r2.ebuild,
+  vala-0.18.0.ebuild:
+  Move to virtual/yacc, #436168 by Matt Turner.
 
 *vala-0.18.0 (25 Sep 2012)
 
