--- a/sys-process/glances/ChangeLog
+++ b/sys-process/glances/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/glances
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.1 2012/09/05 14:36:58 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.2 2012/10/06 09:24:36 jlec Exp $
+
+*glances-1.4.2.1 (06 Oct 2012)
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> +glances-1.4.2.1.ebuild,
+  metadata.xml:
+  Version bump, optional for HTML export
 
 *glances-1.4 (05 Sep 2012)
 
