--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.697 2012/09/30 21:04:02 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.698 2012/10/06 09:35:12 blueness Exp $
+
+*hardened-sources-2.6.32-r132 (06 Oct 2012)
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-2.6.32-r132.ebuild:
+  vanilla-2.6.32.59 + genpatches-2.6.32-48 +
+  grsecurity-2.9.1-2.6.32.59-201210022016
 
   30 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   -hardened-sources-2.6.32-r110.ebuild, -hardened-sources-3.2.20.ebuild,
