--- a/dev-util/gtk-builder-convert/ChangeLog
+++ b/dev-util/gtk-builder-convert/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/gtk-builder-convert
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-builder-convert/ChangeLog,v 1.12 2012/10/06 09:17:05 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-builder-convert/ChangeLog,v 1.13 2012/10/06 09:38:12 pacho Exp $
+
+*gtk-builder-convert-2.24.13 (06 Oct 2012)
+
+  06 Oct 2012; Pacho Ramos <pacho@gentoo.org>
+  +gtk-builder-convert-2.24.13.ebuild:
+  Version bump to sync with gtk+ as talked with Gilles.
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org>
   gtk-builder-convert-2.24.11.ebuild:
@@ -54,4 +60,3 @@
   +gtk-builder-convert-2.24.10.ebuild, +metadata.xml:
   New ebuild for gtk-builder-convert script, split out of gtk+-2.24.10-r1 for
   bug #402905.
-
