--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.699 2012/10/06 09:36:45 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.700 2012/10/06 09:38:33 blueness Exp $
+
+*hardened-sources-3.5.5 (06 Oct 2012)
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.5.5.ebuild:
+  vanilla-3.5.5 + genpatches-3.5-5 + grsecurity-2.9.1-3.5.5-201210022020
 
 *hardened-sources-3.2.30-r2 (06 Oct 2012)
 
