--- a/app-shells/gentoo-bashcomp/ChangeLog
+++ b/app-shells/gentoo-bashcomp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/gentoo-bashcomp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/gentoo-bashcomp/ChangeLog,v 1.46 2012/05/04 11:07:52 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/gentoo-bashcomp/ChangeLog,v 1.47 2012/10/06 09:42:36 pacho Exp $
+
+*gentoo-bashcomp-20101217-r1 (06 Oct 2012)
+
+  06 Oct 2012; Pacho Ramos <pacho@gentoo.org>
+  +gentoo-bashcomp-20101217-r1.ebuild:
+  Fix breakage after /etc/make.globals, bug #431034.
 
   04 May 2012; Alexis Ballier <aballier@gentoo.org>
   gentoo-bashcomp-20101217.ebuild:
@@ -219,4 +225,3 @@
   +gentoo-bashcomp-20050316.ebuild:
   New release; broken out from app-shells/bash-completion and into its own
   ebuild.
-
