--- a/app-accessibility/at-spi2-core/ChangeLog
+++ b/app-accessibility/at-spi2-core/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/at-spi2-core
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.13 2012/10/04 15:08:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.14 2012/10/06 09:49:11 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> at-spi2-core-2.2.3.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> at-spi2-core-2.2.3.ebuild:
   Stable for amd64, wrt bug #427544
