--- a/net-libs/webkit-gtk/ChangeLog
+++ b/net-libs/webkit-gtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.177 2012/10/06 09:50:30 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.178 2012/10/06 09:51:47 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.8.3-r200.ebuild:
+  arm stable, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.8.3-r300.ebuild:
   arm stable, bug #427544
