--- a/net-print/cups-pk-helper/ChangeLog
+++ b/net-print/cups-pk-helper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups-pk-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.13 2012/10/04 15:02:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.14 2012/10/06 09:52:38 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> cups-pk-helper-0.2.2.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> cups-pk-helper-0.2.2.ebuild:
   Stable for amd64, wrt bug #427544
