--- a/sys-apps/gnome-disk-utility/ChangeLog
+++ b/sys-apps/gnome-disk-utility/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/gnome-disk-utility
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gnome-disk-utility/ChangeLog,v 1.70 2012/10/04 15:03:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gnome-disk-utility/ChangeLog,v 1.71 2012/10/06 09:53:50 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org>
+  gnome-disk-utility-3.0.2-r201.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gnome-disk-utility-3.0.2-r201.ebuild:
