--- a/x11-libs/gksu/ChangeLog
+++ b/x11-libs/gksu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gksu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gksu/ChangeLog,v 1.67 2012/10/04 15:03:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gksu/ChangeLog,v 1.68 2012/10/06 09:54:50 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> gksu-2.0.2-r1.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gksu-2.0.2-r1.ebuild:
   Stable for amd64, wrt bug #427544
