--- a/x11-libs/gnome-pty-helper/ChangeLog
+++ b/x11-libs/gnome-pty-helper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gnome-pty-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gnome-pty-helper/ChangeLog,v 1.16 2012/10/04 15:04:06 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gnome-pty-helper/ChangeLog,v 1.17 2012/10/06 09:55:49 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> gnome-pty-helper-0.32.2.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gnome-pty-helper-0.32.2.ebuild:
