--- a/x11-libs/gtk+/ChangeLog
+++ b/x11-libs/gtk+/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtk+
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.612 2012/10/06 09:08:58 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.613 2012/10/06 09:57:16 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> gtk+-2.24.12.ebuild:
+  arm stable, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gtk+-3.4.4.ebuild:
   arm stable, bug #427544
