--- a/x11-themes/gnome-icon-theme-symbolic/ChangeLog
+++ b/x11-themes/gnome-icon-theme-symbolic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-icon-theme-symbolic
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme-symbolic/ChangeLog,v 1.20 2012/10/04 15:06:41 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme-symbolic/ChangeLog,v 1.21 2012/10/06 10:01:28 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org>
+  gnome-icon-theme-symbolic-3.4.0.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gnome-icon-theme-symbolic-3.4.0.ebuild:
