--- a/x11-themes/gnome-themes-standard/ChangeLog
+++ b/x11-themes/gnome-themes-standard/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-themes-standard
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.26 2012/10/04 15:07:16 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.27 2012/10/06 10:03:34 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org>
+  gnome-themes-standard-3.4.2.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gnome-themes-standard-3.4.2.ebuild:
