--- a/media-sound/spek/ChangeLog
+++ b/media-sound/spek/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/spek
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/spek/ChangeLog,v 1.7 2012/09/25 18:48:43 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/spek/ChangeLog,v 1.8 2012/10/06 10:24:22 xmw Exp $
+
+*spek-0.8.1 (06 Oct 2012)
+
+  06 Oct 2012; Michael Weber <xmw@gentoo.org> +spek-0.8.1.ebuild,
+  +files/spek-0.8.1-disable-updates.patch:
+  Version bump, disable update check by default.
 
 *spek-0.8.0 (25 Sep 2012)
 
