--- a/app-accessibility/java-access-bridge/ChangeLog
+++ b/app-accessibility/java-access-bridge/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/java-access-bridge
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/java-access-bridge/ChangeLog,v 1.55 2012/10/04 14:44:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/java-access-bridge/ChangeLog,v 1.56 2012/10/07 01:26:48 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  java-access-bridge-1.26.2.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   java-access-bridge-1.26.2.ebuild:
